# Naixensa-API-REST

./: README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt
events/: models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py
naixensa_backend/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
