[tool.poetry]
name = "naixensa_backend"
version = "0.1.0"
description = ""
authors = ["panyu1512 <kikeferreragius1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
