[tool.poetry]
name = "naixensa_backend"
version = "0.1.0"
description = ""
authors = ["panyu1512 <kikeferreragius1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
asgiref = "^3.7.2"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
psycopg2-binary = "<=2.9.4"
typing-extensions = "^4.8.0"
whitenoise = "^6.6.0"
django-cors-headers = "^4.3.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
PyJWT = "^2.8.0"
pip = "^23.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
